--- a/src/components/ViewBooks.scss
+++ b/src/components/ViewBooks.scss
@@ -1,7 +1,8 @@
 // src/components/ViewBooks.scss
 
 .books-list {
-    @extend .container;
+  @extend .container !optional;
+
   
     .book-item {
       background: #fff;
