--- a/src/components/ViewBooks.scss
+++ b/src/components/ViewBooks.scss
@@ -5,7 +5,7 @@
 
   
     .book-item {
-      background: #fff;
+      background: #000000;
       padding: 20px;
       margin-bottom: 20px;
       border: 1px solid #eee;
@@ -21,7 +21,7 @@
   
       p {
         font-size: 1em;
-        color: #555;
+        color: #0b0b0b;
       }
   
       a, button {
