--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   background-size: cover;
   height: 100vh;
   position: relative;
-  color: #333;
+  color: #ffffff;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -20,7 +20,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.15);
+  background: rgb(255, 255, 255);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px); /* Safari support */
   z-index: -1;
@@ -30,7 +30,9 @@ body::before {
   z-index: 1;
   position: relative;
   padding: 2rem;
-  flex: 1; /* Ensures the content area grows to fill the space between the navbar and footer */
+  color: rgba(255, 255, 255, 0.87);
+  background-color: rgb(255 252 252);
+  flex: 1 ; /* Ensures the content area grows to fill the space between the navbar and footer */
 }
 
 /* Navbar Styles */
@@ -148,7 +150,7 @@ button {
   margin: 2rem auto;
   max-width: 800px;
   text-align: center;
-  color: black;
+  color: rgb(255, 251, 251);
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px); /* Safari support */
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -169,7 +171,7 @@ button {
 
 .card-content {
   font-size: 1.1rem;
-  color: black;
+  color: rgb(249, 248, 248);
 }
 
 /* Grid Layout for Cards */
