--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgb(255, 255, 255);
+  background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px); /* Safari support */
   z-index: -1;
@@ -31,8 +31,8 @@ body::before {
   position: relative;
   padding: 2rem;
   color: rgba(255, 255, 255, 0.87);
-  background-color: rgb(255 252 252);
-  flex: 1 ; /* Ensures the content area grows to fill the space between the navbar and footer */
+  background-color: rgba(255, 252, 252, 0.9);
+  flex: 1; /* Ensures the content area grows to fill the space between the navbar and footer */
 }
 
 /* Navbar Styles */
@@ -47,11 +47,6 @@ body::before {
   z-index: 1000;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
-  
-  &:hover {
-    background: rgba(255, 255, 255, 1); 
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
 }
 
 .nav-link {
@@ -94,7 +89,7 @@ body::before {
 @media (max-width: 768px) {
   .navbar {
     flex-direction: column;
-    align-items: left;
+    align-items: center;
   }
 
   .nav-link {
